--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<!-- <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,5 +9,54 @@
         <script src = "./script.js"></script>
 
     
+</body>
+</html> -->
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evaluador de Impacto</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Encabezado -->
+    <header>
+        <h1>Evaluador de Impacto de las Políticas Públicas</h1>
+        <p>Analiza el impacto en tus variables de interés subiendo datos históricos</p>
+    </header>
+
+    <!-- Contenedor principal -->
+    <main>
+        <!-- Sección de carga de archivos -->
+        <section id="data-input-section">
+            <h2>Ingresa tus datos históricos</h2>
+            <form id="data-form">
+                <div id="input-container">
+                    <label for="ano-inicio">Año de inicio:</label>
+                    <input type="number" id="ano-inicio" name="ano-inicio" required>
+                    <label for="cantidad-anos">Cantidad de años:</label>
+                    <input type="number" id="cantidad-anos" name="cantidad-anos" required>
+                    <div id="data-fields"></div>
+                </div>
+                <button type="button" id="generate-fields-btn">Generar campos</button>
+                <button type="button" id="analyze-btn" disabled>Ejecutar Análisis</button>
+            </form>
+        </section>
+        <section id="results-section">
+            <h2>Resultados del Impacto</h2>
+            <div id="results-container">
+                <p>No hay resultados para mostrar aún.</p>
+            </div>
+        </section>     
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; 2024 Evaluador de Impacto</p>
+    </footer>
+
+    <!-- Script -->
+    <script src="script.js"></script>
 </body>
 </html>
